src/test/deca/codegen/invalid/call_method_on_null.deca
{
    Object x = null;
    x.equals(x);
}